--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.13"
 dependencies = [
+    "dsmr-parser>=1.4.3",
     "typer>=0.19.2",
 ]
