--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 requires-python = ">=3.13"
 dependencies = [
     "dsmr-parser>=1.4.3",
+    "influxdb-client>=1.36",
     "typer>=0.19.2",
 ]
 
