feat: update mkdocs configuration for responsive theme and add repository URL

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,16 +1,19 @@
 site_name: Meteread
 site_description: Utility meter reading with a composable reader/processor/storage architecture
+repo_url: https://github.com/pashamray/meteread
 
 theme:
   name: material
   palette:
-    - scheme: default
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
       primary: indigo
       accent: indigo
       toggle:
         icon: material/brightness-7
         name: Switch to dark mode
-    - scheme: slate
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
       primary: indigo
       accent: indigo
       toggle:
